--- a/src/pages/vorlagen[year].astro
+++ b/src/pages/vorlagen[year].astro
@@ -76,7 +76,7 @@ const filterOptions = {
 
 <Layout>
   <div class="vorlagen-page">
-    <h1 class="page-header">Vorlagen aktualisiert {year}</h1>
+    <h1 class="page-header">Vorlagen {year}</h1>
 
     <YearLinks allYears={allYears} currentYear={year} />
 
