Add Stadtteile feature with dynamic routing and filtering options

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,6 +26,7 @@ const latestYear = years[years.length - 1];
         <ul id="nav-menu">
           <li><a href={base}>GemeinderatsRadar</a></li>
           <li><a href={`${base}vorlagen${latestYear}`}>Vorlagen</a></li>
+          <li><a href={`${base}stadtteile`}>Stadtteile</a></li>
           <li>
             <a
               href="https://sitzungskalender.karlsruhe.de/db/ratsinformation/start"
